apps/homeassistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant-external
  namespace: homeassistant
subsets:
  - addresses:
      - ip: 10.0.100.120
    ports:
      - name: http
        port: 8123
