apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-external
  namespace: homeassistant
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
